src/gen/no_whitespace/OberonGrammarParser.java
// Generated from C:/Users/omer_/IdeaProjects/OberonRecognizer/src/no_whitespace/OberonGrammar.g4 by ANTLR 4.13.1
package gen.no_whitespace;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class OberonGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, STRING_LITERAL=3, Constant=4, IntegerConstant=5, Whitespace=6, 
		Newline=7, BlockComment=8, SEMI=9, COLON=10, DOT=11, LPAREN=12, RPAREN=13, 
		COMMA=14, PLUS=15, AND=16, MINUS=17, NOTEQUAL=18, EQUAL=19, STAR=20, NOT=21, 
		LT=22, LE=23, GT=24, GE=25, Assign=26, MODULE=27, IMPORT=28, VAR=29, BEGIN=30, 
		CONST=31, END=32, PROCEDURE=33, TYPE=34, ARRAY=35, OF=36, OR=37, RECORD=38, 
		WHILE=39, DO=40, IF=41, THEN=42, ELSE=43, ELSIF=44, REPEAT=45, UNTIL=46, 
		DIV=47, MOD=48, ID=49, ErrorChar=50;
	public static final int
		RULE_moduleDefinition = 0, RULE_declarations = 1, RULE_procedureDeclaration = 2, 
		RULE_procedureParameters = 3, RULE_procedureParameter = 4, RULE_typeName = 5, 
		RULE_recordTypeNameElements = 6, RULE_recordElement = 7, RULE_localDeclaration = 8, 
		RULE_typeDeclaration = 9, RULE_singleTypeDeclaration = 10, RULE_variableDeclaration = 11, 
		RULE_singleVariableDeclaration = 12, RULE_exportableID = 13, RULE_constDeclaration = 14, 
		RULE_constDeclarationElement = 15, RULE_block = 16, RULE_statements = 17, 
		RULE_statement = 18, RULE_procCall_statement = 19, RULE_assign_statement = 20, 
		RULE_while_statement = 21, RULE_repeat_statement = 22, RULE_if_statement = 23, 
		RULE_expression = 24, RULE_callParameters = 25, RULE_selector = 26, RULE_arrayOrRecordSelector = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"moduleDefinition", "declarations", "procedureDeclaration", "procedureParameters", 
			"procedureParameter", "typeName", "recordTypeNameElements", "recordElement", 
			"localDeclaration", "typeDeclaration", "singleTypeDeclaration", "variableDeclaration", 
			"singleVariableDeclaration", "exportableID", "constDeclaration", "constDeclarationElement", 
			"block", "statements", "statement", "procCall_statement", "assign_statement", 
			"while_statement", "repeat_statement", "if_statement", "expression", 
			"callParameters", "selector", "arrayOrRecordSelector"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'['", "']'", null, null, null, null, null, null, "';'", "':'", 
			"'.'", "'('", "')'", "','", "'+'", "'&'", "'-'", "'#'", "'='", "'*'", 
			"'~'", "'<'", "'<='", "'>'", "'>='", "':='", "'MODULE'", "'IMPORT'", 
			"'VAR'", "'BEGIN'", "'CONST'", "'END'", "'PROCEDURE'", "'TYPE'", "'ARRAY'", 
			"'OF'", "'OR'", "'RECORD'", "'WHILE'", "'DO'", "'IF'", "'THEN'", "'ELSE'", 
			"'ELSIF'", "'REPEAT'", "'UNTIL'", "'DIV'", "'MOD'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "STRING_LITERAL", "Constant", "IntegerConstant", "Whitespace", 
			"Newline", "BlockComment", "SEMI", "COLON", "DOT", "LPAREN", "RPAREN", 
			"COMMA", "PLUS", "AND", "MINUS", "NOTEQUAL", "EQUAL", "STAR", "NOT", 
			"LT", "LE", "GT", "GE", "Assign", "MODULE", "IMPORT", "VAR", "BEGIN", 
			"CONST", "END", "PROCEDURE", "TYPE", "ARRAY", "OF", "OR", "RECORD", "WHILE", 
			"DO", "IF", "THEN", "ELSE", "ELSIF", "REPEAT", "UNTIL", "DIV", "MOD", 
			"ID", "ErrorChar"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "OberonGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public OberonGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModuleDefinitionContext extends ParserRuleContext {
		public Token n;
		public TerminalNode MODULE() { return getToken(OberonGrammarParser.MODULE, 0); }
		public TerminalNode SEMI() { return getToken(OberonGrammarParser.SEMI, 0); }
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(OberonGrammarParser.DOT, 0); }
		public TerminalNode ID() { return getToken(OberonGrammarParser.ID, 0); }
		public ModuleDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterModuleDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitModuleDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitModuleDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDefinitionContext moduleDefinition() throws RecognitionException {
		ModuleDefinitionContext _localctx = new ModuleDefinitionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_moduleDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			match(MODULE);
			setState(57);
			((ModuleDefinitionContext)_localctx).n = match(ID);
			setState(58);
			match(SEMI);
			setState(59);
			declarations();
			setState(60);
			block();
			setState(61);
			match(DOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationsContext extends ParserRuleContext {
		public List<ProcedureDeclarationContext> procedureDeclaration() {
			return getRuleContexts(ProcedureDeclarationContext.class);
		}
		public ProcedureDeclarationContext procedureDeclaration(int i) {
			return getRuleContext(ProcedureDeclarationContext.class,i);
		}
		public List<LocalDeclarationContext> localDeclaration() {
			return getRuleContexts(LocalDeclarationContext.class);
		}
		public LocalDeclarationContext localDeclaration(int i) {
			return getRuleContext(LocalDeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28454158336L) != 0)) {
				{
				setState(65);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROCEDURE:
					{
					setState(63);
					procedureDeclaration();
					}
					break;
				case VAR:
				case CONST:
				case TYPE:
					{
					setState(64);
					localDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureDeclarationContext extends ParserRuleContext {
		public Token name;
		public ProcedureParametersContext pps;
		public Token export;
		public BlockContext endname;
		public TerminalNode PROCEDURE() { return getToken(OberonGrammarParser.PROCEDURE, 0); }
		public List<TerminalNode> SEMI() { return getTokens(OberonGrammarParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(OberonGrammarParser.SEMI, i);
		}
		public TerminalNode ID() { return getToken(OberonGrammarParser.ID, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public List<ProcedureDeclarationContext> procedureDeclaration() {
			return getRuleContexts(ProcedureDeclarationContext.class);
		}
		public ProcedureDeclarationContext procedureDeclaration(int i) {
			return getRuleContext(ProcedureDeclarationContext.class,i);
		}
		public List<LocalDeclarationContext> localDeclaration() {
			return getRuleContexts(LocalDeclarationContext.class);
		}
		public LocalDeclarationContext localDeclaration(int i) {
			return getRuleContext(LocalDeclarationContext.class,i);
		}
		public ProcedureParametersContext procedureParameters() {
			return getRuleContext(ProcedureParametersContext.class,0);
		}
		public TerminalNode STAR() { return getToken(OberonGrammarParser.STAR, 0); }
		public ProcedureDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterProcedureDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitProcedureDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitProcedureDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureDeclarationContext procedureDeclaration() throws RecognitionException {
		ProcedureDeclarationContext _localctx = new ProcedureDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_procedureDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(PROCEDURE);
			setState(71);
			((ProcedureDeclarationContext)_localctx).name = match(ID);
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(72);
				((ProcedureDeclarationContext)_localctx).pps = procedureParameters();
				}
			}

			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STAR) {
				{
				setState(75);
				((ProcedureDeclarationContext)_localctx).export = match(STAR);
				}
			}

			setState(78);
			match(SEMI);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 28454158336L) != 0)) {
				{
				setState(81);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PROCEDURE:
					{
					setState(79);
					procedureDeclaration();
					}
					break;
				case VAR:
				case CONST:
				case TYPE:
					{
					setState(80);
					localDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			((ProcedureDeclarationContext)_localctx).endname = block();
			setState(87);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureParametersContext extends ParserRuleContext {
		public ProcedureParameterContext procedureParameter;
		public List<ProcedureParameterContext> p = new ArrayList<ProcedureParameterContext>();
		public TerminalNode LPAREN() { return getToken(OberonGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(OberonGrammarParser.RPAREN, 0); }
		public List<ProcedureParameterContext> procedureParameter() {
			return getRuleContexts(ProcedureParameterContext.class);
		}
		public ProcedureParameterContext procedureParameter(int i) {
			return getRuleContext(ProcedureParameterContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(OberonGrammarParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(OberonGrammarParser.SEMI, i);
		}
		public ProcedureParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterProcedureParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitProcedureParameters(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitProcedureParameters(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureParametersContext procedureParameters() throws RecognitionException {
		ProcedureParametersContext _localctx = new ProcedureParametersContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedureParameters);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			match(LPAREN);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(90);
					((ProcedureParametersContext)_localctx).procedureParameter = procedureParameter();
					((ProcedureParametersContext)_localctx).p.add(((ProcedureParametersContext)_localctx).procedureParameter);
					setState(91);
					match(SEMI);
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(98);
			((ProcedureParametersContext)_localctx).procedureParameter = procedureParameter();
			((ProcedureParametersContext)_localctx).p.add(((ProcedureParametersContext)_localctx).procedureParameter);
			setState(99);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureParameterContext extends ParserRuleContext {
		public Token ID;
		public List<Token> names = new ArrayList<Token>();
		public TypeNameContext t;
		public TerminalNode COLON() { return getToken(OberonGrammarParser.COLON, 0); }
		public List<TerminalNode> ID() { return getTokens(OberonGrammarParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(OberonGrammarParser.ID, i);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TerminalNode VAR() { return getToken(OberonGrammarParser.VAR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(OberonGrammarParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(OberonGrammarParser.COMMA, i);
		}
		public ProcedureParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedureParameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterProcedureParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitProcedureParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitProcedureParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProcedureParameterContext procedureParameter() throws RecognitionException {
		ProcedureParameterContext _localctx = new ProcedureParameterContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_procedureParameter);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(101);
				match(VAR);
				}
			}

			setState(108);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(104);
					((ProcedureParameterContext)_localctx).ID = match(ID);
					((ProcedureParameterContext)_localctx).names.add(((ProcedureParameterContext)_localctx).ID);
					setState(105);
					match(COMMA);
					}
					} 
				}
				setState(110);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			setState(111);
			((ProcedureParameterContext)_localctx).ID = match(ID);
			((ProcedureParameterContext)_localctx).names.add(((ProcedureParameterContext)_localctx).ID);
			setState(112);
			match(COLON);
			setState(113);
			((ProcedureParameterContext)_localctx).t = typeName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeNameContext extends ParserRuleContext {
		public TypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeName; }
	 
		public TypeNameContext() { }
		public void copyFrom(TypeNameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ArrayTypeContext extends TypeNameContext {
		public ExpressionContext e;
		public TypeNameContext t;
		public TerminalNode ARRAY() { return getToken(OberonGrammarParser.ARRAY, 0); }
		public TerminalNode OF() { return getToken(OberonGrammarParser.OF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public ArrayTypeContext(TypeNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterArrayType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitArrayType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitArrayType(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleTypeNameContext extends TypeNameContext {
		public TerminalNode ID() { return getToken(OberonGrammarParser.ID, 0); }
		public SimpleTypeNameContext(TypeNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterSimpleTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitSimpleTypeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitSimpleTypeName(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RecordTypeNameContext extends TypeNameContext {
		public RecordTypeNameElementsContext r;
		public TerminalNode RECORD() { return getToken(OberonGrammarParser.RECORD, 0); }
		public TerminalNode END() { return getToken(OberonGrammarParser.END, 0); }
		public RecordTypeNameElementsContext recordTypeNameElements() {
			return getRuleContext(RecordTypeNameElementsContext.class,0);
		}
		public RecordTypeNameContext(TypeNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).enterRecordTypeName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof OberonGrammarListener ) ((OberonGrammarListener)listener).exitRecordTypeName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof OberonGrammarVisitor ) return ((OberonGrammarVisitor<? extends T>)visitor).visitRecordTypeName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeNameContext typeName() throws RecognitionException {
		TypeNameContext _localctx = new TypeNameContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_typeName);
		try {
			setState(125);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				_localctx = new SimpleTypeNameContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				match(ID);
				}
				break;
			case ARRAY:
				_localctx = new ArrayTypeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				match(ARRAY);
				setState(117);
				((ArrayTypeContext)_localctx).e = expression(0);
				setState(118);
				match(OF);
				setState(119);
				((ArrayTypeContext)_localctx).t = typeName();
				}
				break;
			case RECORD:
				_localctx = new RecordTypeNameContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(121);
				match(RECORD);
				setState(122);
				((RecordTypeNameContext)_localctx).r = recordTypeNameElements();
				setState(123);
				match(END);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
